bynkc/tests/fixtures/positive/64_full_time_commons/src/chrono/time/duration.bynk
commons chrono.time

---
A length of time in milliseconds. Can be negative (representing past intervals).
---
type Span = opaque Int

fn Span.zero() -> Span {
  Span.unsafe(0)
}

fn Span.isPositive(self) -> Bool {
  self.raw > 0
}

fn Span.isZero(self) -> Bool {
  self.raw == 0
}
