bynkc/tests/fixtures/negative/39_static_method_on_value/input.bynk
commons test {
  type Counter = { count: Int }

  fn Counter.zero() -> Counter {
    Counter { count: 0 }
  }

  fn bad(c: Counter) -> Counter {
    c.zero()
  }
}
